[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/stage_gui.gd" type="Script" id=1]
[ext_resource path="res://fonts/tes.fnt" type="BitmapFont" id=2]
[ext_resource path="res://fonts/kelt.fnt" type="BitmapFont" id=3]
[ext_resource path="res://sprites/btnmenuUP.png" type="Texture" id=4]
[ext_resource path="res://sprites/btnmenuDOWN.png" type="Texture" id=5]
[ext_resource path="res://sprites/btnsoundUP.png" type="Texture" id=6]
[ext_resource path="res://sprites/btnsoundDOWN.png" type="Texture" id=7]
[ext_resource path="res://sprites/btnpauseUP.png" type="Texture" id=8]
[ext_resource path="res://sprites/btnpauseDOWN.png" type="Texture" id=9]
[ext_resource path="res://scenes/dlg_endgame.tscn" type="PackedScene" id=10]
[ext_resource path="res://scenes/gameover.tscn" type="PackedScene" id=11]

[sub_resource type="Animation" id=1]

resource/name = "New Anim"
length = 3.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Label_help:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 2, 3 ), "transitions":FloatArray( 1, 1, 1 ), "update":0, "values":[ 1.0, 1.0, 0.0 ] }

[node name="stage_gui" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="Label_hi" type="Label" parent="."]

rect/scale = Vector2( 0.2, 0.25 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 7.0
margin/top = 6.0
margin/right = 1002.0
margin/bottom = 190.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
text = "Hi: 00000000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_score" type="Label" parent="."]

anchor/left = 3
anchor/right = 3
rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 10.0
margin/right = -720.0
margin/bottom = 194.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.0390625, 0.0540771, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 5
text = "00000000"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label_pause" type="Label" parent="."]

visibility/visible = false
anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 154.0
margin/top = 176.0
margin/right = -161.0
margin/bottom = 317.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 10
text = "PAUSE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureButton_menu" type="TextureButton" parent="."]

process/pause_mode = 2
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 200.0
margin/top = 5.0
margin/right = 136.0
margin/bottom = 69.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
textures/pressed = ExtResource( 5 )

[node name="TextureButton1_sound" type="TextureButton" parent="."]

process/pause_mode = 2
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 134.0
margin/top = 5.0
margin/right = 70.0
margin/bottom = 69.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
textures/pressed = ExtResource( 7 )

[node name="TextureButton2_pause" type="TextureButton" parent="."]

process/pause_mode = 2
anchor/left = 1
anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 69.0
margin/top = 5.0
margin/right = 5.0
margin/bottom = 69.0
toggle_mode = true
click_on_press = true
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )

[node name="dlg_endgame" parent="." instance=ExtResource( 10 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 201.0
margin/top = 110.0
margin/right = -311.0
margin/bottom = 458.0

[node name="gameover" parent="." instance=ExtResource( 11 )]

visibility/visible = false
anchor/left = 3
anchor/right = 3
margin/left = 250.0
margin/top = 124.0
margin/right = -262.0
margin/bottom = 380.0

[node name="Label_help" type="Label" parent="."]

visibility/visible = false
rect/scale = Vector2( 0.35, 0.35 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 177.0
margin/top = 296.0
margin/right = 1174.0
margin/bottom = 870.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Use finger to move plane UP and DOWN."
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="button_down" from="TextureButton_menu" to="." method="_on_TextureButton_menu_button_down"]

[connection signal="button_down" from="TextureButton1_sound" to="." method="_on_TextureButton1_sound_button_down"]

[connection signal="button_down" from="TextureButton2_pause" to="." method="_on_TextureButton2_pause_button_down"]


